fix:헤더 드롭다운 메뉴 z-index 수정

--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -174,6 +174,7 @@ $sidePadding: 4%;
 			&__content {
 				right: 0;
 				width: 200px;
+				z-index: 11;
 			}
 		}
 
@@ -283,6 +284,7 @@ $sidePadding: 4%;
 					left: 50%;
 					margin-left: -100px;
 					width: 200px;
+					z-index: 11;
 				}
 			}
 
